# SANDAL2

./: .gitignore  CMakeLists.txt  SANDAL2.c  SANDAL2.h  Window.c  Window.h
examples/animation/: debug.c
examples/clear/: main.c
examples/iterateWindow/: main.c
examples/setPlan/: main.c
sandal2/usr/include/SANDAL2/: Element.h
src/: SANDAL2.c  SANDAL2.h  Window.c  Window.h
tests/Clickable/: Makefile  main.c
tests/DisplayCode/: Makefile  main.c
tests/Element/: Makefile  main.c
tests/Font/: Makefile  main.c
tests/SANDAL2/: Makefile  main.c
tests/Sprite/: Makefile  main.c
tests/Window/: Makefile  main.c
